# pocket-tts-candle

./: .gitignore  Cargo.toml  README.md  build.rs
src/: assets.rs  audio.rs  audio_utils.rs  cli.rs  config.rs  device.rs  hf.rs  main.rs  model.rs  spm.rs  tokenizer_utils.rs  voice.rs
