[package]
name = "pocket-tts-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5.54", features = ["derive"] }
rand = "0.9"
rand_distr = "0.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokenizers = { version = "0.21.4", features = ["onig"] }
hf-hub = "0.4.3"
prost = "0.13"

candle = { version = "0.9.2-alpha.2", package = "candle-core" }
candle-nn = { version = "0.9.2-alpha.2" }
symphonia = { version = "0.5.3", features = ["all"], optional = true }
rubato = { version = "0.15.0", optional = true }

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

[features]
default = []
metal = ["candle/metal", "candle-nn/metal"]
# These exist to satisfy the cfgs in main.rs; use --features mimi for voice cloning.
symphonia = ["dep:symphonia"]
rubato = ["dep:rubato"]
mimi = ["symphonia", "rubato"]
